--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.9.0",
+    "dotenv": "^16.5.0",
     "telegraf": "^4.16.3",
     "web3": "^1.10.0"
   }
